@@ -1,17 +1,13 @@
 package com.myorg.operation;
 
-import java.util.Arrays;
 import java.util.List;
 
-import io.github.gear4jtest.core.model.refactor.ExecutionContext;
-import io.github.gear4jtest.core.model.refactor.OperationExecutionContext;
-import io.github.gear4jtest.core.model.refactor.Transformer;
+import io.github.gear4jtest.core.api.behavior.Operator;
+import io.github.gear4jtest.core.api.context.StationExecutionContext;
 
-public class Step10 implements Transformer<Integer, List<String>> {
-
-	@Override
-	public List<String> transform(Integer integer, ExecutionContext context, OperationExecutionContext operationExecution) {
-		return Arrays.asList("");
-	}
-
+public class Step10 implements Operator<Integer, List<String>> {
+    @Override
+    public List<String> transform(Integer integer, StationExecutionContext operationExecution) {
+        return List.of(String.valueOf(integer));
+    }
 }
