@@ -1,17 +1,13 @@
 package com.myorg.operation;
 
-import java.util.Arrays;
 import java.util.List;
 
-import io.github.gear4jtest.core.model.refactor.ExecutionContext;
-import io.github.gear4jtest.core.model.refactor.OperationExecutionContext;
-import io.github.gear4jtest.core.model.refactor.Transformer;
+import io.github.gear4jtest.core.api.behavior.Operator;
+import io.github.gear4jtest.core.api.context.StationExecutionContext;
 
-public class Step9 implements Transformer<Integer, List<Integer>> {
-
-	@Override
-	public List<Integer> transform(Integer integer, ExecutionContext context, OperationExecutionContext operationExecution) {
-		return Arrays.asList(integer);
-	}
-
+public class Step9 implements Operator<Integer, List<Integer>> {
+    @Override
+    public List<Integer> transform(Integer integer, StationExecutionContext operationExecution) {
+        return List.of(integer);
+    }
 }
